VI-131 top baner on mobile fix

--- a/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
@@ -205,7 +205,7 @@
 
   // Banner
   .banner {
-
+min-height: 450px;
     .banner-logo {
       display: none;
     }
